Update title in TopBar to 'wtf.mr By @notjustdanish'

--- a/Themes/GGO_Kirito/core.css
+++ b/Themes/GGO_Kirito/core.css
@@ -1102,7 +1102,7 @@
 
 /*TopBar*/ 
     #app-mount .title_c38106::before {
-        content: "GGO Kirito v1.4.0 By VaporousCreeper";
+        content: "wtf.mr By @notjustdanish";
         color: rgb(255,255,255,0.5);
         font-weight: 500;
 
